2012-04-17 Miguel de Dios <miguel.dedios@artica.es>
	
	* include/functions_html.php, extensions/net_tools.php: cleaned
	source code style.
	
	* include/functions_networkmap.php: into the functions
	"networkmap_generate_dot" and "networkmap_create_agent_node"
	added new parameter $relative for set the url of icons as relative.
	It is used in networmap enterprise.
	
	* include/functions_ui.php: fixed into the function
	"ui_print_message" lost the javascript code when the first messages
	are without close button. And into the function "ui_print_os_icon"
	added new parameter $relative for set the url of icons as relative.
	It is used in networmap enterprise.

2012-04-17  Vanessa Gil  <vanessa.gil@artica.es>

	* operation/tree.php: Exclude graph bar.

2012-04-17  Vanessa Gil  <vanessa.gil@artica.es>

	* godmode/reporting/reporting_builder.item_editor.php: Fixed
	bug: In the item list of a report appears a wrong period.

2012-04-17 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* extensions/update_license_info.php: Delete innecesary extension.

2012-04-17 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* include/functions_html.php
	 include/styles/pandora.css
	 include/javascript/jquery.pandora.js
	 include/functions_config.php
	 extensions/update_manager.php
	 extensions/update_manager/load_updatemanager.php
	 extensions/update_manager/lib/functions.ajax.php
	 extensions/update_manager/settings.php
	 operation/system_alert.php
	 godmode/setup/setup.php: Changed layout in lincense model window 
	 and modified layout in setup view.

2012-04-17  Sergio Martin <sergio.martin@artica.es>

	* include/functions.php: Stripped # character in a 
	string before converted it to image 3504479

2012-04-17  Vanessa Gil  <vanessa.gil@artica.es>

	* operation/tree.php
	  operation/menu.php
	  operation/tree/no_branch.png
	  operation/tree/branch.png
	  operation/tree/closed.png
	  operation/tree/expanded.png
	  operation/tree/first_closed.png
	  operation/tree/first_expanded.png