@@ -1,3 +1,8 @@
+2012-04-17 Juan Manuel Ramon <juanmanuel.ramon@artica.es>
+
+	* extensions/update_manager.php: Changed layout in 
+	license dialog window.
+
 2012-04-17 Miguel de Dios <miguel.dedios@artica.es>
 	
 	* include/functions_html.php, extensions/net_tools.php: cleaned
